--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "graphql": "^16.3.0",
     "next": "12.1.5",
     "next-images": "^1.8.4",
+    "prismjs": "^1.28.0",
     "react": "18.0.0",
     "react-apollo": "^3.1.5",
     "react-dom": "18.0.0",
     "react-fade-in": "^2.0.1",
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.3",
+    "reading-time": "^1.5.0",
     "remove": "^0.1.5",
     "swr": "^1.3.0",
     "zustand": "^4.0.0-rc.0"
@@ -30,6 +32,7 @@
     "@types/date-fns": "^2.6.0",
     "@types/image-to-base64": "^2.1.0",
     "@types/node": "17.0.24",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.20.1-alpha.9",
