--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "graphql": "^16.3.0",
     "next": "12.1.5",
     "next-images": "^1.8.4",
+    "next-seo": "^5.4.0",
     "prismjs": "^1.28.0",
     "react": "18.0.0",
     "react-apollo": "^3.1.5",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/date-fns": "^2.6.0",
     "@types/image-to-base64": "^2.1.0",
+    "@types/next-seo": "^2.1.2",
     "@types/node": "17.0.24",
     "@types/prismjs": "^1.26.0",
     "@types/react": "18.0.5",
