feat: implement ISR in homepage

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -22,5 +22,6 @@ rules:
     "import/prefer-default-export": "off",
     "react/function-component-definition": "off",
     "react/jsx-props-no-spreading": "off",
-    "import/no-extraneous-dependencies": "off"
+    "import/no-extraneous-dependencies": "off",
+    "react/prop-types": "off"
   }
