--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-markdown": "^8.0.3",
     "reading-time": "^1.5.0",
     "remove": "^0.1.5",
+    "sharp": "^0.30.4",
     "swr": "^1.3.0",
     "zustand": "^4.0.0-rc.0"
   },
