--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "@stitches/react": "^1.2.8",
     "apollo-boost": "^0.4.9",
     "date-fns": "^2.28.0",
-    "graphql": "^16.3.0",
+    "graphql": "^16.4.0",
     "next": "12.1.5",
     "next-images": "^1.8.4",
     "next-seo": "^5.4.0",
     "prismjs": "^1.28.0",
-    "react": "18.0.0",
+    "react": "18.1.0",
     "react-apollo": "^3.1.5",
-    "react-dom": "18.0.0",
+    "react-dom": "18.1.0",
     "react-fade-in": "^2.0.1",
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.3",
@@ -28,23 +28,23 @@
     "remove": "^0.1.5",
     "sharp": "^0.30.4",
     "swr": "^1.3.0",
-    "zustand": "^4.0.0-rc.0"
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/date-fns": "^2.6.0",
     "@types/image-to-base64": "^2.1.0",
     "@types/next-seo": "^2.1.2",
-    "@types/node": "17.0.24",
+    "@types/node": "17.0.30",
     "@types/prismjs": "^1.26.0",
-    "@types/react": "18.0.5",
-    "@types/react-dom": "18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.20.1-alpha.9",
+    "@types/react": "18.0.8",
+    "@types/react-dom": "18.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
     "eslint": "^8.14.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.1.5",
     "eslint-plugin-react": "^7.29.4",
     "prettier": "^2.6.2",
-    "prettier-eslint": "^14.0.0",
-    "typescript": "4.6.3"
+    "prettier-eslint": "^14.0.2",
+    "typescript": "4.6.4"
   }
 }
